# ai-platform-trainerv1

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GAMEPLAY_FEATURES.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  README.md  README_CUDA.md  README_ENEMY_CUDA.md  README_ENEMY_TRAINING.md  add_to_path.ps1  ai-trainer.bat  ai-trainer.ps1  build_and_test_gpu_pipeline.py  build_cuda_extensions.py  cleanup_plan.md  config.json  config_enemy_numpy.json  config_manager.py  direct_launch.py  interface_test.py  main.py  performance_demo.py  phase2_completion_report.json  project_restructure.py  pyproject.toml  pytest.ini  requirements.txt  run_ai_trainer.py  run_enemy_cuda_training.bat  run_enemy_cuda_training.sh  run_game.bat  run_game.py  run_game_examples.bat  run_game_with_features.bat  run_training.py  settings.json  setup.py  simple_launcher.py  (+24 more)
.github/workflows/: ci.yml
.specstory/history/: 2025-05-24_06-44-ways-to-start-an-application-project.md  2025-05-28_03-25-testing-gpu-rendering-for-headless-rl-model.md  2025-05-28_03-27-creating-a-cuda-based-mvp-rl-agent.md  2025-05-28_03-42-running-nvidia-devicequery-for-gpu-verification.md  2025-05-28_03-57-creating-a-file-tree-for-project-structure.md  2025-05-28_06-43-training-enemy-agent-with-gpu-commands.md  2025-05-28_12-01-file-tree-structure-for-ai-platform-trainer-project.md  2025-05-28_12-21-#-final-cudarl-arena-implementation-plan.md  2025-05-28_13-17-we-have-to-find-out-why-the-enemy-does-not-chase-t.md  2025-05-28_15-27-when-the-option-in-the-menu-(play-supervised-ai)-i.md  2025-05-28_15-45-file-not-found-error-when-running-script.md
ai_platform_trainer/: __main__.py  main.py  simple_launcher.py  test_training_fixes.py
ai_platform_trainer/agents/: __init__.py  base_agent.py
ai_platform_trainer/agents/rl/: README.md  (+1 more)
ai_platform_trainer/ai/: __init__.py
ai_platform_trainer/ai_model/: README.md  __init__.py  enemy_dataset.py  enemy_rl_agent.py  simple_missile_model.py  train.py  train_all.py  train_enemy_rl.py  train_missile_model.py
ai_platform_trainer/core/: adapter.py  config_loader.py  data_logger.py  launcher.py  launcher_di.py  launcher_refactored.py  logging_config.py  render_mode.py  service_locator.py
ai_platform_trainer/cpp/: CMakeLists.txt  build_cuda.bat  check_cuda.py  check_cuda_extensions.py  debug_crash.py  debug_training.py  gpu_env_wrapper.py  gpu_environment.py  quick_train_test.py  safe_env_wrapper.py  setup.py  setup_environment.py  train_gpu_fixed.py  train_missile_avoidance.py  train_working.py  verify_gpu_training.py
ai_platform_trainer/cpp/build_temp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gpu_environment.vcxproj  gpu_environment.vcxproj.filters  gpu_game_environment.sln
ai_platform_trainer/cpp/build_temp/gpu_environment.dir/Release/: physics.cu.cache  physics.cu1901367482.deps
ai_platform_trainer/cpp/build_temp/gpu_environment.dir/Release/gpu_environment.tlog/: CL.25120.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  gpu_environment.lastbuildstate
ai_platform_trainer/cpp/build_temp/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
ai_platform_trainer/cpp/build_temp/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
ai_platform_trainer/cpp/include/: environment.h
ai_platform_trainer/cpp/logs/PPO_1/: events.out.tfevents.1748412921.windows.33500.0
ai_platform_trainer/cpp/pybind/: bindings.cpp  physics_bindings.cpp
ai_platform_trainer/cpp/src/: environment.cpp  environment_safe.cpp  physics.cu  physics_fix.cu  simple_physics.cu
ai_platform_trainer/data/: data_manager.py
ai_platform_trainer/entities/: enemy_play.py  enemy_training.py  entity_factory.py  missile.py  player_play.py  player_training.py
ai_platform_trainer/game/: __init__.py  environment.py  rewards.py
ai_platform_trainer/gameplay/: collision_manager.py  collisions.py  common_utils.py  config.py  difficulty_manager.py  display_manager.py  enemy_manager.py  game.py  game_core.py  game_di.py  game_refactored.py  menu.py  missile_ai_controller.py  missile_manager.py  pixel_pursuit_env.py  post_training_processor.py  powerup_manager.py  renderer.py  rl_enemy_controller.py  scaled_menu.py  scaled_renderer.py  screen_manager.py  spawner.py  state_machine.py
ai_platform_trainer/models/: enemy_rl_gpu.npz
ai_platform_trainer/ui/: __init__.py  game_loop.py  menus.py
ai_platform_trainer/utils/: common_utils.py  data_validator_and_trainer.py  model_manager.py  numpy_data_validator.py
backups/launchers/: core_launcher_di.py  main.py
core/: data_logger.py  db_connection.py
data/raw/: enemy_training_data.json  enemy_training_data.npz  training_data.json  training_data_1741240384.json  training_data_1741242535.json  training_data_1741242945.json  training_data_1741245169.json  training_data_1741248213.json  training_data_1741249382.json  training_data_1741250529.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  PHASE2_PLAN.md
entities/: enemy.py  player.py
gameplay/: game.py
models/: enemy_ai_model.pth  enemy_ai_model_backup_128.pth  missile_20250306_024651.pth  missile_model.pth  numpy_enemy_model.npz
models/enemy_rl/: final_model.pth  model.npz
python/cudarl/: __init__.py  mock_env.py
reports/analysis/: config_manager_analysis.md
scripts/: migrate_codebase.py  run_ai_trainer.py  train_enemy_rl_model.py  universal_launcher.py
scripts/tools/: fix_linting.py  generate_dummy_enemy_data.py
src/: validate_cuda.cu
src/ai_platform_trainer/: main.py
src/ai_platform_trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/core/: cuda_utils.cpp  cuda_utils.h  environment.cpp  environment.h
src/gameplay/: game.py  menu.py
src/gpu/: environment_device.cu  kernels.cu  kernels.cuh
src/test/: test_main.cpp
tests/: conftest.py
tests/integration/: test_game_mechanics.py  test_training_pipeline.py
(+90 files in other folders)
